--- a/src/pages/comentarios/comentarios.html
+++ b/src/pages/comentarios/comentarios.html
@@ -59,7 +59,7 @@
               </div>
             </div>
             <div class="modal-content">
-              <p class="content-link">www.aloha.com.br</p>
+              <p class="content-link">Opa! Denúncia não encontrada</p>
               <br />
               <span class="content-historia"></span>
             </div>
@@ -67,7 +67,7 @@
           <main>
             <div class="add-comment">
               <a>
-                <p>Escrever comentário ></p>
+                <p id="add-comment-text"></p>
               </a>
             </div>
           </main>
