--- a/src/pages/criar-denuncia/criar-denuncia.html
+++ b/src/pages/criar-denuncia/criar-denuncia.html
@@ -76,10 +76,10 @@
               <b>Conte sua história:</b>
               <textarea class="input-base text-area-base" style="resize: none" name="historia" required></textarea>
               <br />
-              <class id="anexar">
+              <!-- <class id="anexar">
                 Anexar documento
                 <img src="../../assets/paper-clip 1.jpg" width="28" height="28" />
-              </class>
+              </class> -->
               <br />
               <input type="submit" class="button-base bg-main-color" style="width: 10rem" value="Finalizar Denúncia" />
             </form>
