--- a/src/pages/inserir-email/inserir-email.html
+++ b/src/pages/inserir-email/inserir-email.html
@@ -24,7 +24,7 @@
     </div>
     <div class="form-container">
       <p class="text-main-color">RECUPERAR SENHA</p>
-      <form name="form_recupsenha2" id="form_recupsenha2" class="form-recupsenha2">
+      <form name="inserir_email" id="inserir_email" class="inserir_email">
         <input type="email" class="input-base" name="email" placeholder="Insira seu e-mail" /><br />
         <input type="submit" class="button-base bg-main-color" value="Enviar" />
       </form>
