fix: edicao de idade na tela de usuarios

--- a/src/pages/comentarios/comentarios.html
+++ b/src/pages/comentarios/comentarios.html
@@ -46,7 +46,9 @@
   <div class="app">
     <div class="top-navbar">
       <p id="top-user-name"></p>
-      <img src="../../assets/user.svg" class="profile-pic-nav" alt="user" />
+      <a href="../usuario/usuario.html">
+        <img src="../../assets/user.svg" class="profile-pic-nav" alt="user" />
+      </a>
     </div>
     <div class="app-container">
       <div class="card-app">
