feat: alerta em inserir email

--- a/src/pages/inserir-email/inserir-email.html
+++ b/src/pages/inserir-email/inserir-email.html
@@ -26,7 +26,7 @@
       <p class="text-main-color">RECUPERAR SENHA</p>
       <form name="inserir_email" id="inserir_email" class="inserir_email">
         <input type="email" class="input-base" name="email" placeholder="Insira seu e-mail" /><br />
-        <input type="submit" class="button-base bg-main-color" value="Enviar" />
+        <input id="submit-button" type="submit" class="button-base bg-main-color" value="Enviar" />
       </form>
     </div>
   </div>
