--- a/src/pages/recuperar-senha/recuperar-senha.html
+++ b/src/pages/recuperar-senha/recuperar-senha.html
@@ -29,7 +29,7 @@
           required /><br />
         <input type="password" class="input-base" name="senha2" placeholder="Repita sua nova senha" minlength="6"
           required /><br />
-        <input type="submit" class="button-base bg-main-color" value="Enviar" />
+        <input id="submit-button" type="submit" class="button-base bg-main-color" value="Enviar" />
       </form>
     </div>
   </div>
