feat: enviar email ao aprovar/negar denuncia

--- a/src/pages/admin/admin.html
+++ b/src/pages/admin/admin.html
@@ -13,6 +13,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
     rel="stylesheet" />
 
+  <script src="https://smtpjs.com/v3/smtp.js" defer></script>
+  <script src="../../DOMUtils.js" defer></script>
+  <script src="../../main.js" defer></script>
+  <script src="admin.js" defer></script>
+
   <title>Administrador - SOS WEB</title>
 </head>
 
@@ -142,10 +147,6 @@
       </div>
     </div>
   </div>
-
-  <script src="../../DOMUtils.js"></script>
-  <script src="../../main.js"></script>
-  <script src="admin.js"></script>
 </body>
 
 </html>
